--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,10 @@ services:
     environment:
       - xpack.security.enabled=false
       - discovery.seed_hosts=node-primary,node-secondary,monitoring
+      - cluster.initial_master_nodes=172.25.0.2
       - cluster.name=docker-cluster
       - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"  
     ulimits:
       memlock:
         soft: -1
@@ -24,6 +25,7 @@ services:
     container_name: node-secondary
     environment:
       - discovery.seed_hosts=node-primary,node-secondary,monitoring
+      - cluster.initial_master_nodes=172.25.0.2
       - xpack.security.enabled=false
       - cluster.name=docker-cluster
       - bootstrap.memory_lock=true
@@ -45,6 +47,7 @@ services:
     container_name: monitoring
     environment:
       - discovery.seed_hosts=node-primary,node-secondary,monitoring
+      - cluster.initial_master_nodes=172.25.0.2
       - xpack.security.enabled=false
       - cluster.name=docker-cluster
       - bootstrap.memory_lock=true
