--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,15 +43,8 @@ services:
     #profiles:
     #  - donotstart
   monitoring:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.1.1
+    image: docker.elastic.co/kibana/kibana:8.1.1
     container_name: monitoring
-    environment:
-      - discovery.seed_hosts=node-primary,node-secondary,monitoring
-      - cluster.initial_master_nodes=172.25.0.2
-      - xpack.security.enabled=false
-      - cluster.name=docker-cluster
-      - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
     ulimits:
       memlock:
         soft: -1
@@ -59,7 +52,7 @@ services:
     volumes:
       - esdata3:/usr/share/elasticsearch/data
     ports:
-      - 9400:9200
+      - 5601:5601
     networks:
       - esnet
     #profiles:
